# ai-commons

./: .gitignore  README.md  pyproject.toml  repomix-output.txt
ai_docs/: PLAN__create_commons.md  PLAN__create_commons_refined.md  PLAN__switch_to_uv.md
scripts/: consolidate_model_aliases.py
src/ai_commons/: client.py  exceptions.py  utils.py
src/ai_commons/data/: model-aliases.yaml
src/ai_commons/providers/: base.py  openai_provider.py  openrouter_provider.py
tests/: test_client.py  test_providers.py  test_utils.py
